--- a/tgboost/notebooks/tgboost_usage_guide.ipynb
+++ b/tgboost/notebooks/tgboost_usage_guide.ipynb
@@ -1,9 +1,81 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "62aeed6b",
+   "metadata": {},
+   "source": [
+    "# INTRODUCTION"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2ad80c1",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-info\">\n",
+    "<b><b>\n",
+    "1) **tgBoost** is a python package composed by a **data pipeline** and a pretrained **QSPR model** for the prediction of *T*$_g$ of organic monomer molecules.\n",
+    "\n",
+    "2) The tgBoost model is based on an Extreme Gradient Boosting framework (XGBoost), relying on fast computation and accuracy\n",
+    "\n",
+    "3) Before its usage the model needs to be retrained, since the xgboost package needs to train the model with the C++ version used by your processor\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb502639",
+   "metadata": {},
+   "source": [
+    "The following notebook is aimed for tgBoost users in atmospheric chemistry, and it includes initial model training and some guidelines."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "7cb8e0bd",
+   "execution_count": 11,
+   "id": "5afd85cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tgboost.train_pipeline import run_training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "77c7f923",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DATASET:  /Users/tommaso/Desktop/tgApp_dev/tgboost/datasets/Koop_dataset.csv \n",
+      "\n",
+      "*** EXTRACTION step\n",
+      "n_input SMILES:  415 \n",
+      "\n",
+      "*** TRANSFORMING step\n",
+      "n_output SMILES:  298 \n",
+      "\n",
+      "~~ DATA info \n",
+      "\n",
+      "Xtrain:  298 ytrain:  298 Xtest:  0 ytest:  0\n",
+      "*** REGRESSION step\n",
+      "\n",
+      "~ _ ~ ^ ~ _ ~ PIPELINE completed: trained model\n"
+     ]
+    }
+   ],
+   "source": [
+    "run_training()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e03bb25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,11 +104,44 @@
   },
   {
    "cell_type": "markdown",
+   "id": "48f7258b",
+   "metadata": {},
+   "source": [
+    "## 1. Train *T*$_g$ model of tgBoost "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6f64dda",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc62f61b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5f7d4ca",
+   "metadata": {},
+   "source": [
+    "## 2. Working with tgBoost"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "96c107ac",
    "metadata": {},
    "source": [
-    "## 1. First scenario\n",
-    "#### File with single list of SMILES (it could be a .csv, .txt, .xlsx file)"
+    "### 2.1 First scenario\n",
+    " - File with single list of SMILES (it could be a .csv, .txt, .xlsx file)\n",
+    " - Pure list of SMILES, no header"
    ]
   },
   {
@@ -352,8 +457,8 @@
    "id": "03bf205e",
    "metadata": {},
    "source": [
-    "## 2. Second scenario\n",
-    "#### File with titled column SMILES (it could be a .csv, .txt, .xlsx file)"
+    "### 2.2 Second scenario\n",
+    "- File with titled column SMILES (it could be a .csv, .txt, .xlsx file)"
    ]
   },
   {
